Hero section added

--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -16,3 +16,10 @@
     color: black;
     font-size: 30px;
 }
+
+.home {
+
+    background-color: #7C48CE;
+    text-decoration: none;
+    border-radius: 30px;
+}
