home page added

--- a/src/Pages/Home/Home/Home.css
+++ b/src/Pages/Home/Home/Home.css
@@ -48,6 +48,49 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
+.clr {
+
+    color: #7C48CE;
+}
+
+.sText {
+
+    font-size: 50px;
+    color: #B85744;
+}
+
+.projectBg {
+
+    background-color: #FF625E;
+    border-radius: 15px;
+    padding: 10px;
+}
+
+.pageText {
+
+    font-size: 50px;
+    font-weight: bold;
+    color: white
+}
+
+.carimage {
+
+    border: 0;
+    border-radius: 15px;
+}
+
+.btclr {
+
+    background-color: white;
+    color: #FF625E;
+}
+
+.btclr:hover {
+
+    background-color: rgb(221, 214, 214);
+    color: #FF625E;
+}
+
 
 /* phone  */
 @media screen and (max-width:576px) {
