--- a/src/Pages/Shared/CourseCard/CourseCard.css
+++ b/src/Pages/Shared/CourseCard/CourseCard.css
@@ -38,3 +38,15 @@
     }
 
 }
+
+/* tablet */
+@media screen and (min-width:577px) and (max-width:991px) {
+
+    .cd {
+
+        width: 18rem;
+        margin: 10px 10px;
+        padding: 0;
+    }
+
+}
