--- a/src/Pages/Courses/CheckOut/CheckOut.css
+++ b/src/Pages/Courses/CheckOut/CheckOut.css
@@ -4,6 +4,19 @@
     margin: 130px auto;
 }
 
+.checkCard2 {
+
+    width: 40rem;
+    margin: 130px auto;
+    background-color: #1B1834;
+    color: white;
+}
+
+.bgs {
+
+    background-color: #1B1834;
+}
+
 .purchase-btn {
 
     color: white;
