--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -5,9 +5,23 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
+.profile-card2 {
+
+    margin: 0 auto;
+    width: 540px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: #1B1834;
+    color: white;
+}
+
 .ola {
 
     margin-top: 120px;
+}
+
+.ola2 {
+
+    margin-top: 90px;
 }
 
 .profile-update {
@@ -15,6 +29,16 @@
     width: 25rem;
     margin: 0 auto;
     margin-top: 30px;
+
+}
+
+.profile-update2 {
+
+    width: 25rem;
+    margin: 0 auto;
+    margin-top: 30px;
+    background-color: #1B1834;
+    color: white;
 
 }
 
