--- a/src/Pages/Shared/CourseCard/CourseCard.css
+++ b/src/Pages/Shared/CourseCard/CourseCard.css
@@ -8,6 +8,18 @@
 
 }
 
+.cd2 {
+
+    width: 20rem;
+    margin: 10px auto;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    margin-top: 30px;
+    border-radius: 10px;
+    background-color: #1B1834;
+    color: white;
+
+}
+
 .btn-card {
 
     width: 100%;
